[update] 게시글 좋아요, 태그 로직 일부 추가 및 수정 후 오류 처리